# mctrl

./: .cproject  .gitignore  .project  Legacy code.txt  sdkconfig  sdkconfig.old
main/: .LL_ADC.c.swp  .LL_ADC.h.swp  .LL_TIMERS.c.swp  .LL_TIMERS.h.swp  .main.c.swp  APP_HALL_SENS.c  APP_HALL_SENS.h  APP_MOT_CTRL.c  APP_MOT_CTRL.h  BOARD_CFG.h  CMakeLists.txt  LL_ADC.c  LL_ADC.h  LL_ISR.c  LL_PORTS.h  LL_TIMERS.c  LL_TIMERS.h  main.c
main/APP/: APP_HALL_SENS.c  APP_MOT_CTRL.c
main/CFG/: BLDC_CFG.h
main/HAL/: .LL_TIMERS.c.swp  .LL_TIMERS.h.swp  LL_ISR.h  LL_PORTS.c  LL_TIMERS.c  LL_TIMERS.h
